--- a/P3/Makefile
+++ b/P3/Makefile
@@ -22,7 +22,7 @@ all: clean $(TARGETS)
 # COMPILACION
 
 $(TARGETS):
-	$(CXX) -o $(BIN)/$@ $(SRC)/$@.cc $(CXXFLAGS) $(SRC)/escena.cc $(SRC)/ejes.cc $(SRC)/objeto.cc $(SRC)/file_ply_stl.cc $(SRC)/objeto_rev.cc $(SRC)/bounding_box.cc $(SRC)/cubo.cc $(SRC)/base.cc $(SRC)/foco.cc $(SRC)/amplificador.cc $(LDFLAGS)
+	$(CXX) -o $(BIN)/$@ $(SRC)/$@.cc $(CXXFLAGS) $(SRC)/escena.cc $(SRC)/ejes.cc $(SRC)/objeto.cc $(SRC)/file_ply_stl.cc $(SRC)/objeto_rev.cc $(SRC)/bounding_box.cc $(SRC)/cubo.cc $(SRC)/base.cc $(SRC)/foco.cc $(SRC)/amplificador.cc $(SRC)/lampara.cc $(SRC)/cilindro.cc $(LDFLAGS)
 	#$(CXX) -o $(BIN)/$@ $(SRC)/$@.cc $(CXXFLAGS) $(SRC)/model.cpp $(SRC)/model_lanzadera.cpp $(LDFLAGS)
 
 
